Finished SVM task

--- a/ISDN3000C_Lab07.ipynb
+++ b/ISDN3000C_Lab07.ipynb
@@ -810,46 +810,182 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 84,
       "metadata": {
-        "id": "BZby82L3_P7r"
+        "id": "BZby82L3_P7r",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e649ac40-4fb9-475d-bf70-635b10c91d86"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.66\n"
+          ]
+        }
+      ],
       "source": [
-        "# --- TODO: Train a default SVC and evaluate on test dataset --- #"
+        "# --- TODO: Train a default SVC and evaluate on test dataset --- #from sklearn.svm import SVC\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Example usage\n",
+        "\n",
+        "# Initialize an SVM model with the 'rbf' kernel, and a 'C' hyperparameter at 1\n",
+        "svm_clf = SVC(kernel='rbf', C=1.0, random_state=42)\n",
+        "\n",
+        "# Train the model\n",
+        "svm_clf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict the values\n",
+        "svm_predictions = svm_clf.predict(X_test)\n",
+        "\n",
+        "# Get the accuracy with respect to the ground truth\n",
+        "accuracy = accuracy_score(y_test, svm_predictions)\n",
+        "print(accuracy)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 89,
       "metadata": {
-        "id": "EzzC1kj4Lzgy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EzzC1kj4Lzgy",
+        "outputId": "867134b6-d501-4bc8-9ea1-a00ed41654bd"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "kernel=linear  accuracy=0.7567\n",
+            "kernel=poly    accuracy=0.7967\n",
+            "kernel=rbf     accuracy=0.8067\n",
+            "kernel=sigmoid  accuracy=0.6567\n"
+          ]
+        }
+      ],
       "source": [
-        "# --- TODO: Train multiple SVCs with different kernels, and evaluate the results. --- #"
+        "# --- TODO: Train multiple SVCs with different kernels, and evaluate the results. --- #from sklearn.svm import SVC\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "\n",
+        "kernels = ['linear', 'poly', 'rbf', 'sigmoid']\n",
+        "\n",
+        "for k in kernels:\n",
+        "    # scale features before SVM for better convergence/performance\n",
+        "    pipe = make_pipeline(StandardScaler(), SVC(kernel=k, C=1.0, random_state=42))\n",
+        "    pipe.fit(X_train, y_train)\n",
+        "    svm_predictions = pipe.predict(X_test)\n",
+        "    acc = accuracy_score(y_test, svm_predictions)\n",
+        "    print(f\"kernel={k:6s}  accuracy={acc:.4f}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 90,
       "metadata": {
-        "id": "25GhNm-JLzgy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "25GhNm-JLzgy",
+        "outputId": "03fd3123-d07c-4f89-ea04-2cb145be3fe7"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "C=  0.01  accuracy=0.5433\n",
+            "C=   0.1  accuracy=0.8000\n",
+            "C=     1  accuracy=0.8067\n",
+            "C=    10  accuracy=0.8233\n",
+            "C=   100  accuracy=0.8267\n",
+            "\n",
+            "Best C: 100 with test accuracy 0.8267\n"
+          ]
+        }
+      ],
       "source": [
-        "# --- TODO: with the best kernel in last step, do more experiments with C parameter --- #"
+        "# --- TODO: with the best kernel in last step, do more experiments with C parameter --- #from sklearn.svm import SVC\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Test different C values using the RBF kernel\n",
+        "Cs = [0.01, 0.1, 1, 10, 100]\n",
+        "results = []\n",
+        "\n",
+        "for C in Cs:\n",
+        "    pipe = make_pipeline(\n",
+        "        StandardScaler(),\n",
+        "        SVC(kernel='rbf', C=C, gamma='scale', random_state=42)\n",
+        "    )\n",
+        "    pipe.fit(X_train, y_train)\n",
+        "    preds = pipe.predict(X_test)\n",
+        "    acc = accuracy_score(y_test, preds)\n",
+        "    results.append((C, acc))\n",
+        "    print(f\"C={C:6}  accuracy={acc:.4f}\")\n",
+        "\n",
+        "# Print best C\n",
+        "best_C, best_acc = max(results, key=lambda x: x[1])\n",
+        "print(f\"\\nBest C: {best_C} with test accuracy {best_acc:.4f}\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 92,
       "metadata": {
-        "id": "zODEo34WLzgy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zODEo34WLzgy",
+        "outputId": "e23d4582-e45b-4d0c-c2b3-e398d59d4ce9"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gamma=0.001    accuracy=0.7500\n",
+            "gamma=0.01     accuracy=0.8000\n",
+            "gamma=0.1      accuracy=0.8200\n",
+            "gamma=1        accuracy=0.7800\n",
+            "gamma=10       accuracy=0.7467\n",
+            "gamma=100      accuracy=0.5533\n",
+            "Best gamma for C=100: 0.1 with accuracy=0.8200\n"
+          ]
+        }
+      ],
       "source": [
-        "# --- TODO: with the best set-up from previous steps, explore parameter gamma. --- #"
+        "# --- TODO: with the best set-up from previous steps, explore parameter gamma. --- #from sklearn.svm import SVC\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "C = 100\n",
+        "gammas = [0.001, 0.01, 0.1, 1, 10, 100]  # only numeric values\n",
+        "\n",
+        "results = []\n",
+        "for g in gammas:\n",
+        "    pipe = make_pipeline(\n",
+        "        StandardScaler(),\n",
+        "        SVC(kernel='rbf', C=C, gamma=g, random_state=42)\n",
+        "    )\n",
+        "    pipe.fit(X_train, y_train)\n",
+        "    preds = pipe.predict(X_test)\n",
+        "    acc = accuracy_score(y_test, preds)\n",
+        "    results.append((g, acc))\n",
+        "    print(f\"gamma={g:<7}  accuracy={acc:.4f}\")\n",
+        "\n",
+        "best_gamma, best_acc = max(results, key=lambda x: x[1])\n",
+        "print(f\"Best gamma for C={C}: {best_gamma} with accuracy={best_acc:.4f}\")"
       ]
     },
     {
@@ -929,8 +1065,7 @@
         "\n",
         "Double click the cell and answer the following questions\n",
         "\n",
-        "6. Does it differ from your manual tuning?\n",
-        "\n",
+        "6. Does it differ from your manual tuning? No, they are the same.\n",
         "\n",
         "----"
       ]
