Step Random forest

--- a/ISDN3000C_Lab07.ipynb
+++ b/ISDN3000C_Lab07.ipynb
@@ -1108,13 +1108,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 98,
       "metadata": {
-        "id": "1uCZ_HvbCCv6"
+        "id": "1uCZ_HvbCCv6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6077423c-3546-44bd-fbdf-dff9a28ec8ba"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Random Forest accuracy: 0.8033333333333333\n"
+          ]
+        }
+      ],
       "source": [
-        "# --- TODO: Train a randowm forest classifier  --- #"
+        "# --- TODO: Train a random forest classifier  --- #\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Simple Random Forest workflow\n",
+        "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "\n",
+        "# Train\n",
+        "rf_clf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict & evaluate\n",
+        "rf_predictions = rf_clf.predict(X_test)\n",
+        "print(\"Random Forest accuracy:\", accuracy_score(y_test, rf_predictions))\n"
       ]
     },
     {
@@ -1128,7 +1153,7 @@
         "Double click the cell and answer the following questions\n",
         "\n",
         "7. How does its accuracy compare to the single `DecisionTreeClassifier` and the other models?\n",
-        "\n",
+        "Its accuracy is higher than all the decision trees made previously and slightly better than the linear regressor. Its result is slightly worse than SVM.\n",
         "\n",
         "\n",
         "----"
@@ -1136,13 +1161,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 39,
+      "execution_count": 103,
       "metadata": {
-        "id": "mHHPt4ifLzgz"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mHHPt4ifLzgz",
+        "outputId": "e9c2fd31-6855-4d71-95d5-f42ea0de2586"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Random Forest accuracy: 0.8033333333333333\n",
+            "Top feature importances:\n",
+            "BreadThickness    0.408824\n",
+            "ToastingTime      0.330375\n",
+            "AmbientTemp       0.150751\n",
+            "IsFrozen          0.110050\n",
+            "dtype: float64\n"
+          ]
+        }
+      ],
       "source": [
-        "# --- TODO: find and visualize feature_importance of your model  --- #"
+        "# --- TODO: find and visualize feature_importance of your model  --- ## --- TODO: Train a random forest classifier  --- #\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Simple Random Forest workflow\n",
+        "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "\n",
+        "# Train\n",
+        "rf_clf.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict & evaluate\n",
+        "rf_predictions = rf_clf.predict(X_test)\n",
+        "print(\"Random Forest accuracy:\", accuracy_score(y_test, rf_predictions))\n",
+        "\n",
+        "# Feature importances (compute after fitting)\n",
+        "feature_names = X_train.columns if hasattr(X_train, \"columns\") else [f\"f{i}\" for i in range(X_train.shape[1])]\n",
+        "importances = rf_clf.feature_importances_\n",
+        "forest_importances = pd.Series(importances, index=feature_names).sort_values(ascending=False)\n",
+        "\n",
+        "# Show top features\n",
+        "print(\"Top feature importances:\")\n",
+        "print(forest_importances.head(4))"
       ]
     },
     {
@@ -1155,7 +1220,7 @@
         "\n",
         "Double click the cell and answer the following questions\n",
         "\n",
-        "8. Which features are most important for determining the state of the toast? Does this align with your intuition?\n",
+        "8. Which features are most important for determining the state of the toast? Does this align with your intuition? My intuition is toasting time, but I am not familiar with frozen toast, so I am not sure about that feature.\n",
         "\n",
         "\n",
         "----"
@@ -1189,6 +1254,24 @@
         "\n",
         "**Create cells of `python` to fill in your code, and of `markdown` to answer the questions.**\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from xgboost import xgboost.XGBClassifier\n"
+      ],
+      "metadata": {
+        "id": "LQmdbAbekbV7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "KWfEUg7HkcMj"
+      }
     },
     {
       "cell_type": "markdown",
