--- a/ISDN3000C_Lab07.ipynb
+++ b/ISDN3000C_Lab07.ipynb
@@ -504,43 +504,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
-      "metadata": {
-        "id": "UH4rwUW8xW7r",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "093074df-a048-4d63-f80a-32af64761fbc"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0.7966666666666666\n",
-            "[17 15 16]\n"
-          ]
-        }
-      ],
-      "source": [
-        "# --- TODO: Train a logistic regressor on your training and testing data. --- #\n",
-        "from sklearn.linear_model import LogisticRegression\n",
-        "from sklearn.metrics import accuracy_score\n",
-        "\n",
-        "# Initialize the Logistic Regression model\n",
-        "log_reg = LogisticRegression(max_iter=1200, solver='liblinear')\n",
-        "\n",
-        "# Train the model\n",
-        "log_reg.fit(X_train, y_train)\n",
-        "\n",
-        "# Predict values for our testing data\n",
-        "predictions = log_reg.predict(X_test)\n",
-        "print(accuracy_score(y_test,predictions))\n",
-        "print(log_reg.n_iter_)"
-      ]
-    },
-    {
-      "cell_type": "code",
       "source": [
         "# Sweep max_iter and solver for LogisticRegression to find convergence behavior\n",
         "from sklearn.linear_model import LogisticRegression\n",
@@ -599,12 +562,12 @@
         "print(pivot_acc)"
       ],
       "metadata": {
-        "id": "LckBMzAw_41i",
-        "outputId": "ac8ed222-efd2-4caf-d5fa-c293149feaae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "LckBMzAw_41i",
+        "outputId": "ac8ed222-efd2-4caf-d5fa-c293149feaae"
       },
       "execution_count": 35,
       "outputs": [
@@ -1087,6 +1050,43 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "id": "UH4rwUW8xW7r",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "eb269702-7d92-4366-80da-f538e8a38125"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.7966666666666666\n",
+            "[17 15 16]\n"
+          ]
+        }
+      ],
+      "source": [
+        "# --- TODO: Train a logistic regressor on your training and testing data. --- #\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "# Initialize the Logistic Regression model\n",
+        "log_reg = LogisticRegression(max_iter=1200, solver='liblinear')\n",
+        "\n",
+        "# Train the model\n",
+        "log_reg.fit(X_train, y_train)\n",
+        "\n",
+        "# Predict values for our testing data\n",
+        "predictions = log_reg.predict(X_test)\n",
+        "print(accuracy_score(y_test,predictions))\n",
+        "print(log_reg.n_iter_)"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "8qDHWEIJLzgx"
@@ -1105,7 +1105,7 @@
         "\n",
         "----\n",
         "3. Change the solver. How does the accuracy change? How fast does it converge (use ```log_reg.n_iter_``` to find the number of iterations before convergence)?\n",
-        "When I changed it to 'liblinear', the accuracy improved by .0066, but when I used 'saga', it failed to converge. They usually stay around the same accuracy.Different accuracies are only seen in failed convergence results. 1200 iterations to get the convergence for saga. 785 for lbfgs. 26 for newton-cg.\n"
+        "When I changed it to 'liblinear', the accuracy improved by .0066, but when I used 'saga', it failed to converge. They usually stay around the same accuracy.Different accuracies are only seen in failed convergence results. 785 for lbfgs. 26 for newton-cg. saga and sag did not converge.\n"
       ]
     },
     {
