Answer more questions

--- a/ISDN3000C_Lab07.ipynb
+++ b/ISDN3000C_Lab07.ipynb
@@ -1105,7 +1105,9 @@
         "\n",
         "----\n",
         "3. Change the solver. How does the accuracy change? How fast does it converge (use ```log_reg.n_iter_``` to find the number of iterations before convergence)?\n",
-        "When I changed it to 'liblinear', the accuracy improved by .0066, but when I used 'saga', it failed to converge. They usually stay around the same accuracy.Different accuracies are only seen in failed convergence results. 785 for lbfgs. 26 for newton-cg. saga and sag did not converge.\n"
+        "When I changed it to 'liblinear', the accuracy improved by .00667, but when I used 'saga', it failed to converge. They usually stay around the same accuracy.Different accuracies are only seen in failed convergence results. 785 for lbfgs. 26 for newton-cg. saga and sag did not converge. Liblinear uses a one-vs-rest approach for multiclass problems, training separate binary classifiers for each class. Each of these classifiers can converge at different rates, resulting in multiple iteration counts (answer: [17 15 16]). Other solvers like lbfgs typically use a single multinomial model that treats all classes simultaneously, yielding just one iteration number for the unified optimization process.\n",
+        "\n",
+        "\n"
       ]
     },
     {
@@ -2071,6 +2073,23 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "The Support Vector Machine (SVC) model achieved the highest test accuracy of 0.8267 (82.67%).\n",
+        "\n",
+        "The Decision Tree is the most interpretable model. Its decision-making process can be visualized as a simple flowchart of \"if-then-else\" rules (e.g., \"IF color > 0.7 AND crunchiness < 0.4 THEN it's perfect toast\"). This white-box model is very intuitive and easy for anyone to understand without needing a background in machine learning.\n",
+        "\n",
+        "SVC is most accurate (82.67%) but uninterpretable. The interpretable Decision Tree was least accurate (75.67%).\n",
+        "\n",
+        "Random Forest (80.33%) is robust but complex because it averages hundreds of trees. You cannot trace a single, clear decision path, making it a \"black box.\"\n",
+        "\n",
+        "Logistic Regression (79.67%) is the best compromise. Its performance is near the best, and its simple, weighted-sum logic is fully transparent. This minor accuracy loss is justified by gaining a completely explainable model for a consumer product."
+      ],
+      "metadata": {
+        "id": "KQCYuC1EQIiV"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "8qiTtEhhLzgz"
       },
@@ -2082,6 +2101,301 @@
         "3.  Write down the trainining and evaluation process about this best model below, with anything that you think is necessary.\n",
         "4.  We will use another blackbox dataset to test your model. The work will be graded based on computing efficiency (runtime) and accuracy."
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- TODO: with the best set-up from previous steps, explore parameter gamma. --- #\n",
+        "from sklearn.svm import SVC\n",
+        "from sklearn.pipeline import make_pipeline\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import time\n",
+        "\n",
+        "C = 100\n",
+        "# Test both numeric values and automatic options\n",
+        "gammas = [0.001, 0.01, 0.1, 1, 10, 100, 'scale', 'auto']\n",
+        "results = []\n",
+        "training_times = []\n",
+        "inference_times = []\n",
+        "\n",
+        "for g in gammas:\n",
+        "    pipe = make_pipeline(\n",
+        "        StandardScaler(),\n",
+        "        SVC(kernel='rbf', C=C, gamma=g, random_state=42)\n",
+        "    )\n",
+        "\n",
+        "    # Measure training time\n",
+        "    start_train = time.time()\n",
+        "    pipe.fit(X_train, y_train)\n",
+        "    train_time = time.time() - start_train\n",
+        "    training_times.append(train_time)\n",
+        "\n",
+        "    # Measure inference time\n",
+        "    start_infer = time.time()\n",
+        "    preds = pipe.predict(X_test)\n",
+        "    infer_time = time.time() - start_infer\n",
+        "    inference_times.append(infer_time)\n",
+        "\n",
+        "    acc = accuracy_score(y_test, preds)\n",
+        "    results.append((g, acc, train_time, infer_time))\n",
+        "    print(f\"gamma={str(g):<7}  accuracy={acc:.4f}  train_time={train_time:.4f}s  infer_time={infer_time:.4f}s\")\n",
+        "\n",
+        "# Find best gamma based on accuracy\n",
+        "best_gamma, best_acc, best_train_time, best_infer_time = max(results, key=lambda x: x[1])\n",
+        "print(f\"\\nBest gamma for C={C}: {best_gamma} with accuracy={best_acc:.4f}\")\n",
+        "print(f\"Training time: {best_train_time:.4f}s, Inference time: {best_infer_time:.4f}s\")\n",
+        "\n",
+        "# Efficiency analysis\n",
+        "print(\"\\nEfficiency Analysis (top performers):\")\n",
+        "for g, acc, train_t, infer_t in sorted(results, key=lambda x: x[1], reverse=True)[:4]:\n",
+        "    efficiency_score = acc / (train_t + infer_t)  # Accuracy per second\n",
+        "    print(f\"gamma={str(g):<7} acc={acc:.4f}, total_time={train_t+infer_t:.4f}s, efficiency={efficiency_score:.4f}\")\n",
+        ""
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4NwiMRVJKQjX",
+        "outputId": "4011d46a-9393-416d-953c-9e6ff1095364"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "gamma=0.001    accuracy=0.7500  train_time=0.0465s  infer_time=0.0112s\n",
+            "gamma=0.01     accuracy=0.8000  train_time=0.0317s  infer_time=0.0108s\n",
+            "gamma=0.1      accuracy=0.8200  train_time=0.0464s  infer_time=0.0094s\n",
+            "gamma=1        accuracy=0.7800  train_time=0.0456s  infer_time=0.0110s\n",
+            "gamma=10       accuracy=0.7467  train_time=0.1034s  infer_time=0.0216s\n",
+            "gamma=100      accuracy=0.5533  train_time=0.0871s  infer_time=0.0285s\n",
+            "gamma=scale    accuracy=0.8267  train_time=0.0552s  infer_time=0.0097s\n",
+            "gamma=auto     accuracy=0.8267  train_time=0.0554s  infer_time=0.0102s\n",
+            "\n",
+            "Best gamma for C=100: scale with accuracy=0.8267\n",
+            "Training time: 0.0552s, Inference time: 0.0097s\n",
+            "\n",
+            "Efficiency Analysis (top performers):\n",
+            "gamma=scale   acc=0.8267, total_time=0.0649s, efficiency=12.7417\n",
+            "gamma=auto    acc=0.8267, total_time=0.0656s, efficiency=12.6038\n",
+            "gamma=0.1     acc=0.8200, total_time=0.0558s, efficiency=14.6925\n",
+            "gamma=0.01    acc=0.8000, total_time=0.0426s, efficiency=18.7838\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Explored scale and auto gamma aside from 0.1 gamma and discovered gamma=0.1 is still best due to comparison of computing efficiency. The 2.67% accuracy drop is negligible compared to the 33% speed improvement"
+      ],
+      "metadata": {
+        "id": "OasNJ4ffLCIf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- TODO: Train a logistic regressor on your training and testing data. --- #\n",
+        "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import time\n",
+        "\n",
+        "# Initialize the Logistic Regression model\n",
+        "log_reg = LogisticRegression(max_iter=1200, solver='liblinear')\n",
+        "\n",
+        "# Train the model and measure training time\n",
+        "start_train = time.time()\n",
+        "log_reg.fit(X_train, y_train)\n",
+        "train_time = time.time() - start_train\n",
+        "\n",
+        "# Predict values for our testing data and measure inference time\n",
+        "start_infer = time.time()\n",
+        "predictions = log_reg.predict(X_test)\n",
+        "infer_time = time.time() - start_infer\n",
+        "\n",
+        "# Calculate total time\n",
+        "total_time = train_time + infer_time\n",
+        "\n",
+        "# Print results in the SAME format as your SVM code\n",
+        "print(f\"Accuracy: {accuracy_score(y_test, predictions):.4f}\")\n",
+        "print(f\"Training time: {train_time:.4f}s\")\n",
+        "print(f\"Inference time: {infer_time:.4f}s\")\n",
+        "print(f\"Total time: {total_time:.4f}s\")\n",
+        "print(f\"Iterations: {log_reg.n_iter_}\")\n",
+        "\n",
+        "# Calculate efficiency score to compare with SVM\n",
+        "efficiency_score = accuracy_score(y_test, predictions) / total_time\n",
+        "print(f\"Efficiency score: {efficiency_score:.4f}\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eCwSFsNkLt0g",
+        "outputId": "943e7ab9-8e39-45a2-b13b-12fcde61fb01"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.7967\n",
+            "Training time: 0.0136s\n",
+            "Inference time: 0.0029s\n",
+            "Total time: 0.0164s\n",
+            "Iterations: [17 15 16]\n",
+            "Efficiency score: 48.4312\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from xgboost import XGBClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import time\n",
+        "\n",
+        "# Initialize XGBoost with specified parameters\n",
+        "xgb_model = XGBClassifier(\n",
+        "    learning_rate=0.3,\n",
+        "    max_depth=3,\n",
+        "    n_estimators=300,\n",
+        "    subsample=0.8,\n",
+        "    eval_metric='logloss',\n",
+        "    random_state=42\n",
+        ")\n",
+        "\n",
+        "# Measure training time\n",
+        "start_train = time.time()\n",
+        "xgb_model.fit(X_train, y_train)\n",
+        "train_time = time.time() - start_train\n",
+        "\n",
+        "# Measure inference time\n",
+        "start_infer = time.time()\n",
+        "predictions = xgb_model.predict(X_test)\n",
+        "infer_time = time.time() - start_infer\n",
+        "\n",
+        "# Calculate total time\n",
+        "total_time = train_time + infer_time\n",
+        "\n",
+        "# Print results in same format as SVM and Logistic Regression\n",
+        "print(f\"Accuracy: {accuracy_score(y_test, predictions):.4f}\")\n",
+        "print(f\"Training time: {train_time:.4f}s\")\n",
+        "print(f\"Inference time: {infer_time:.4f}s\")\n",
+        "print(f\"Total time: {total_time:.4f}s\")\n",
+        "\n",
+        "# Calculate efficiency score for comparison\n",
+        "efficiency_score = accuracy_score(y_test, predictions) / total_time\n",
+        "print(f\"Efficiency score: {efficiency_score:.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "z5jvaxhLNs3f",
+        "outputId": "1bc6c4bf-023e-49b8-82aa-a3061147bc5b"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.8100\n",
+            "Training time: 1.7442s\n",
+            "Inference time: 0.0166s\n",
+            "Total time: 1.7608s\n",
+            "Efficiency score: 0.4600\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# --- TODO: Train a random forest classifier  --- #\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "import pandas as pd\n",
+        "import time\n",
+        "\n",
+        "# Simple Random Forest workflow\n",
+        "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
+        "\n",
+        "# Measure training time\n",
+        "start_train = time.time()\n",
+        "rf_clf.fit(X_train, y_train)\n",
+        "train_time = time.time() - start_train\n",
+        "\n",
+        "# Measure inference time\n",
+        "start_infer = time.time()\n",
+        "rf_predictions = rf_clf.predict(X_test)\n",
+        "infer_time = time.time() - start_infer\n",
+        "\n",
+        "# Calculate total time\n",
+        "total_time = train_time + infer_time\n",
+        "\n",
+        "# Print results in same format as other models\n",
+        "print(f\"Accuracy: {accuracy_score(y_test, rf_predictions):.4f}\")\n",
+        "print(f\"Training time: {train_time:.4f}s\")\n",
+        "print(f\"Inference time: {infer_time:.4f}s\")\n",
+        "print(f\"Total time: {total_time:.4f}s\")\n",
+        "\n",
+        "# Calculate efficiency score for comparison\n",
+        "efficiency_score = accuracy_score(y_test, rf_predictions) / total_time\n",
+        "print(f\"Efficiency score: {efficiency_score:.4f}\")"
+      ],
+      "metadata": {
+        "id": "kWQfqkjsOiXO",
+        "outputId": "453c2bed-813f-4995-b6f1-272de223b9d8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 0.8033\n",
+            "Training time: 0.8324s\n",
+            "Inference time: 0.0215s\n",
+            "Total time: 0.8538s\n",
+            "Efficiency score: 0.9409\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Logistic Regression achieves the optimal balance of speed and accuracy for this task. At 0.0164 seconds total runtime, it is significantly faster than all other models while maintaining competitive accuracy. Its efficiency score of 48.43 is four times higher than the next best model. The minor 3% accuracy sacrifice compared to the top SVM is negligible given the substantial computational advantages, making it the most suitable and efficient choice for deployment on unknown data where both performance and speed are critical.\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "d5dbrS5ZMfNH"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "| Model               | Accuracy | Training Time (s) | Inference Time (s) | Total Time (s) | Efficiency Score |\n",
+        "|---------------------|----------|-------------------|---------------------|----------------|------------------|\n",
+        "| Logistic Regression | 0.7967   | 0.0136            | 0.0029              | 0.0164         | 48.4312          |\n",
+        "| SVM (gamma=0.01)    | 0.8000   | 0.0400            | 0.0026              | 0.0426         | 18.7838          |\n",
+        "| Random Forest       | 0.8033   | 0.8324            | 0.0215              | 0.8538         | 0.9409           |\n",
+        "| XGBoost             | 0.8100   | 1.7442            | 0.0166              | 1.7608         | 0.4600           |"
+      ],
+      "metadata": {
+        "id": "PkT_BJZ4Pfed"
+      }
     }
   ],
   "metadata": {
