Logistic regression to be fine-tuned

--- a/ISDN3000C_Lab07.ipynb
+++ b/ISDN3000C_Lab07.ipynb
@@ -2236,20 +2236,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "eCwSFsNkLt0g",
-        "outputId": "943e7ab9-8e39-45a2-b13b-12fcde61fb01"
+        "outputId": "13b47b8d-f9f2-42e7-958c-92edc16371bd"
       },
-      "execution_count": 46,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Accuracy: 0.7967\n",
-            "Training time: 0.0136s\n",
-            "Inference time: 0.0029s\n",
-            "Total time: 0.0164s\n",
+            "Training time: 0.0110s\n",
+            "Inference time: 0.0017s\n",
+            "Total time: 0.0127s\n",
             "Iterations: [17 15 16]\n",
-            "Efficiency score: 48.4312\n"
+            "Efficiency score: 62.7375\n"
           ]
         }
       ]
@@ -2352,11 +2352,11 @@
         "print(f\"Efficiency score: {efficiency_score:.4f}\")"
       ],
       "metadata": {
-        "id": "kWQfqkjsOiXO",
-        "outputId": "453c2bed-813f-4995-b6f1-272de223b9d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "kWQfqkjsOiXO",
+        "outputId": "453c2bed-813f-4995-b6f1-272de223b9d8"
       },
       "execution_count": 48,
       "outputs": [
@@ -2376,7 +2376,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Logistic Regression achieves the optimal balance of speed and accuracy for this task. At 0.0164 seconds total runtime, it is significantly faster than all other models while maintaining competitive accuracy. Its efficiency score of 48.43 is four times higher than the next best model. The minor 3% accuracy sacrifice compared to the top SVM is negligible given the substantial computational advantages, making it the most suitable and efficient choice for deployment on unknown data where both performance and speed are critical.\n",
+        "Logistic Regression achieves the optimal balance of speed and accuracy for this task. The minor 3% accuracy sacrifice compared to the top SVM is negligible given the substantial computational advantages, making it the most suitable and efficient choice for deployment on unknown data where both performance and speed are critical.\n",
         "\n"
       ],
       "metadata": {
@@ -2396,6 +2396,65 @@
       "metadata": {
         "id": "PkT_BJZ4Pfed"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Logistic regression is best but efficiency changes from 45-60 when code is run again. Need to find a more reliable consistent efficiency."
+      ],
+      "metadata": {
+        "id": "5Hm9dzW0VHgV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Run multiple trials and average the results\n",
+        "efficiency_scores = []\n",
+        "accuracies = []\n",
+        "\n",
+        "for _ in range(10):  # Run 10 trials\n",
+        "    log_reg = LogisticRegression(\n",
+        "        solver='liblinear',\n",
+        "        max_iter=50,  # Safe upper bound\n",
+        "        random_state=42  # Remove fixed seed for real variance\n",
+        "    )\n",
+        "\n",
+        "    start_train = time.time()\n",
+        "    log_reg.fit(X_train, y_train)\n",
+        "    train_time = time.time() - start_train\n",
+        "\n",
+        "    start_infer = time.time()\n",
+        "    predictions = log_reg.predict(X_test)\n",
+        "    infer_time = time.time() - start_infer\n",
+        "\n",
+        "    total_time = train_time + infer_time\n",
+        "    accuracy = accuracy_score(y_test, predictions)\n",
+        "\n",
+        "    efficiency_scores.append(accuracy / total_time)\n",
+        "    accuracies.append(accuracy)\n",
+        "\n",
+        "print(f\"Average Efficiency: {np.mean(efficiency_scores):.4f} ± {np.std(efficiency_scores):.4f}\")\n",
+        "print(f\"Average Accuracy: {np.mean(accuracies):.4f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HN6MLsnbVVpB",
+        "outputId": "09a13023-f2e4-463c-8b30-17bdbb68792d"
+      },
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average Efficiency: 60.5873 ± 16.6429\n",
+            "Average Accuracy: 0.7967\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
